docs/envoy/v1.24.0/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt
External dependencies: ``dataplane_ext``
========================================


envoy.access_loggers.extension_filters.cel
------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__


envoy.access_loggers.wasm
-------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.bootstrap.wasm
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.compression.brotli.compressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/0cd2e3926e95e7e2930f57ae3f4885508d462a25/LICENSE>`__


envoy.compression.brotli.decompressor
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/0cd2e3926e95e7e2930f57ae3f4885508d462a25/LICENSE>`__


envoy.compression.zstd.compressor
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.2 <https://github.com/facebook/zstd/releases/tag/v1.5.2>`__, 2022-01-20, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.compression.zstd.decompressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.2 <https://github.com/facebook/zstd/releases/tag/v1.5.2>`__, 2022-01-20, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.filters.http.aws_lambda
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.85.0 <https://github.com/curl/curl/releases/tag/curl-7_85_0>`__, 2022-08-31, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_85_0/COPYING>`__


envoy.filters.http.aws_request_signing
--------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.85.0 <https://github.com/curl/curl/releases/tag/curl-7_85_0>`__, 2022-08-31, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_85_0/COPYING>`__


envoy.filters.http.gcp_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `26c22c0 <https://github.com/google/jwt_verify_lib/tree/26c22c0ce1bc607eec8fa5dd26b707378adc7a88>`__, 2022-09-22, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/26c22c0ce1bc607eec8fa5dd26b707378adc7a88/LICENSE>`__


envoy.filters.http.grpc_json_transcoder
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `387cce0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/387cce028806226ef0976ad276a3842a9219df99>`__, 2022-10-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/387cce028806226ef0976ad276a3842a9219df99/LICENSE>`__


envoy.filters.http.jwt_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `26c22c0 <https://github.com/google/jwt_verify_lib/tree/26c22c0ce1bc607eec8fa5dd26b707378adc7a88>`__, 2022-09-22, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/26c22c0ce1bc607eec8fa5dd26b707378adc7a88/LICENSE>`__


envoy.filters.http.language
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `ICU Library <https://github.com/unicode-org/icu>`__, `71-1 <https://github.com/unicode-org/icu/releases/tag/release-71-1>`__, 2022-04-06, , `ICU <https://github.com/unicode-org/icu/blob/release-71-1/icu4c/LICENSE>`__


envoy.filters.http.lua
----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LuaJIT <https://luajit.org>`__, `1d8b747 <https://github.com/LuaJIT/LuaJIT/tree/1d8b747c161db457e032a023ebbff511f5de5ec2>`__, 2020-10-12, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__, `MIT <https://github.com/LuaJIT/LuaJIT/blob/1d8b747c161db457e032a023ebbff511f5de5ec2/COPYRIGHT>`__
  `Moonjit <https://github.com/moonjit/moonjit>`__, `2.2.0 <https://github.com/moonjit/moonjit/releases/tag/2.2.0>`__, 2020-01-14, `cpe:2.3:a:moonjit_project:moonjit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amoonjit_project%3Amoonjit%3A%2A&search_type=all>`__, `moonjit <https://github.com/moonjit/moonjit/blob/2.2.0/COPYRIGHT>`__


envoy.filters.http.rbac
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__


envoy.filters.http.wasm
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.filters.network.dubbo_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `e9bb36e <https://github.com/alibaba/hessian2-codec/tree/e9bb36e206f2c5054b50d11f88bb1b95c77766f8>`__, 2022-10-10, , `Apache-2.0 <https://github.com/alibaba/hessian2-codec/blob/e9bb36e206f2c5054b50d11f88bb1b95c77766f8/LICENSE>`__


envoy.filters.network.kafka_broker
----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (source) <https://kafka.apache.org>`__, `3.2.3 <https://github.com/apache/kafka/releases/tag/3.2.3>`__, 2022-09-13, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.2.3/LICENSE>`__


envoy.filters.network.kafka_mesh
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (C/C++ client) <https://github.com/edenhill/librdkafka>`__, `1.8.2 <https://github.com/edenhill/librdkafka/releases/tag/v1.8.2>`__, 2021-10-18, , `librdkafka <https://github.com/edenhill/librdkafka/blob/v1.8.2/LICENSE>`__
  `Kafka (source) <https://kafka.apache.org>`__, `3.2.3 <https://github.com/apache/kafka/releases/tag/3.2.3>`__, 2022-09-13, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.2.3/LICENSE>`__


envoy.filters.network.mysql_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.postgres_proxy
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.rbac
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__


envoy.filters.network.wasm
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.grpc_credentials.aws_iam
------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.85.0 <https://github.com/curl/curl/releases/tag/curl-7_85_0>`__, 2022-08-31, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_85_0/COPYING>`__


envoy.matching.input_matchers.hyperscan
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.78.0 <https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.gz>`__, 2021-12-08, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.78.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.0 <https://github.com/intel/hyperscan/releases/tag/v5.4.0>`__, 2021-01-13, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/v5.4.0/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__


envoy.network.connection_balance.dlb
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Intel Dlb <https://networkbuilders.intel.com/solutionslibrary/queue-management-and-load-balancing-on-intel-architecture>`__, `7.8.0 <https://downloadmirror.intel.com/744007/dlb_linux_src_release_7.8.0_2022_09_20.txz>`__, 2022-03-30, , 


envoy.rate_limit_descriptors.expr
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__


envoy.rbac.matchers.upstream_ip_port
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__


envoy.regex_engines.hyperscan
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.78.0 <https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.gz>`__, 2021-12-08, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.78.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.0 <https://github.com/intel/hyperscan/releases/tag/v5.4.0>`__, 2021-01-13, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/v5.4.0/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__


envoy.stat_sinks.wasm
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `11f9d66 <https://github.com/google/cel-cpp/tree/11f9d662e71f73b28f4104ef2cf0550d96e677ae>`__, 2022-09-01, , 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `22.9.29 <https://github.com/google/flatbuffers/releases/tag/v22.9.29>`__, 2022-09-30, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v22.9.29/LICENSE.txt>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.tls.key_providers.cryptomb
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `libipp-crypto <https://github.com/intel/ipp-crypto>`__, `2021.5 <https://github.com/intel/ipp-crypto/releases/tag/ippcp_2021.5>`__, 2021-12-21, `cpe:2.3:a:intel:cryptography_for_intel_integrated_performance_primitives:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aintel%3Acryptography_for_intel_integrated_performance_primitives%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/intel/ipp-crypto/blob/ippcp_2021.5/LICENSE>`__


envoy.tls.key_providers.qat
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `qatlib <https://github.com/intel/qatlib>`__, `21.11.0 <https://github.com/intel/qatlib/releases/tag/21.11.0>`__, 2021-11-10, , `BSD-3-Clause <https://github.com/intel/qatlib/blob/21.11.0/LICENSE>`__


envoy.tracers.opencensus
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.85.0 <https://github.com/curl/curl/releases/tag/curl-7_85_0>`__, 2022-08-31, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_85_0/COPYING>`__


envoy.wasm.runtime.null
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.v8
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Chromium's trace event headers <https://chromium.googlesource.com/chromium/src/base/trace_event/common/>`__, `521ac34 <https://storage.googleapis.com/envoyproxy-wee8/chromium-base_trace_event_common-521ac34ebd795939c7e16b37d9d3ddb40e8ed556.tar.gz>`__, 2022-10-12, , 
  `V8 <https://v8.dev>`__, `10.7.193.13 <https://storage.googleapis.com/envoyproxy-wee8/v8-10.7.193.13.tar.gz>`__, 2022-10-12, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.wamr
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-12.0.1/llvm/LICENSE.TXT>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__
  `Webassembly Micro Runtime <https://github.com/bytecodealliance/wasm-micro-runtime>`__, `WAMR-05-18-2022 <https://github.com/bytecodealliance/wasm-micro-runtime/releases/tag/WAMR-05-18-2022>`__, 2022-05-18, , `Apache-2.0 <https://github.com/bytecodealliance/wasm-micro-runtime/blob/WAMR-05-18-2022/LICENSE>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.3.1 <https://github.com/bazelbuild/rules_rust/releases/tag/0.3.1>`__, 2022-04-26, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.3.1/LICENSE.txt>`__
  `wasm-c-api <https://github.com/WebAssembly/wasm-c-api>`__, `c9d3128 <https://github.com/WebAssembly/wasm-c-api/tree/c9d31284651b975f05ac27cee0bab1377560b87e>`__, 2021-01-11, , `Apache-2.0 <https://github.com/WebAssembly/wasm-c-api/blob/c9d31284651b975f05ac27cee0bab1377560b87e/LICENSE>`__
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `1.0.0 <https://github.com/bytecodealliance/wasmtime/releases/tag/v1.0.0>`__, 2022-09-20, `cpe:2.3:a:bytecodealliance:wasmtime:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Abytecodealliance%3Awasmtime%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/bytecodealliance/wasmtime/blob/v1.0.0/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__


envoy.wasm.runtime.wavm
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-12.0.1/llvm/LICENSE.TXT>`__
  `WAVM <https://wavm.github.io>`__, `3f9a150 <https://github.com/WAVM/WAVM/tree/3f9a150cac7faf28eab357a2c5b83d2ec740c7d9>`__, 2022-05-14, `cpe:2.3:a:webassembly_virtual_machine_project:webassembly_virtual_machine:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Awebassembly_virtual_machine_project%3Awebassembly_virtual_machine%3A%2A&search_type=all>`__, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `b0a0594 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/b0a0594e8ab4023857393fab349170fb487ec5a9>`__, 2022-10-09, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/b0a0594e8ab4023857393fab349170fb487ec5a9/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/e30535b7c0cd3126e6401bc3769063a74bbb37be/LICENSE>`__

